<resources>
    <!-- General Strings -->
    <string name="app_name">One Rep Max Tracker</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="percentage">%1$d %%</string>
    <string name="weight_with_unit">%1$s %2$s</string>
    <string name="back_button_content_description">Back button</string>

    <!-- Top Bar Titles -->
    <string name="top_bar_title">1RM Tracker</string>
...
    <string name="loading_indicator_content_description">Circular progress indicator</string>

    <!-- Movement List Screen -->
    <string name="movement_list_screen_list_title">Your top results</string>
    <string name="movement_list_screen_empty_list">Start by adding your first result</string>
    <string name="movement_list_screen_add_movement_button">+ Add movement</string>
    <string name="movement_list_screen_add_movement_button_content_description">Add movement button</string>
    <string name="movement_list_screen_latest_or_best_results_switch_content_description">Latest or best results switch</string>
    <string name="movement_list_screen_movement_card_content_description">Movement card</string>
    <string name="movement_list_screen_movement_card_no_weight">-</string>
    <string name="movement_list_screen_movement_card_nav_icon_content_description">Navigation icon</string>
    <string name="movement_list_screen_movement_drop_down_menu_content_description">Movement drop down menu</string>

    <string name="movement_list_screen_add_movement_dialog_content_description">Add movement dialog</string>
    <string name="movement_list_screen_add_movement_dialog_title">Add movement</string>
    <string name="movement_list_screen_add_movement_dialog_confirm_button">Add</string>

    <string name="movement_list_screen_edit_movement_dialog_content_description">Edit movement dialog</string>
    <string name="movement_list_screen_edit_movement_dialog_title">Edit movement</string>
    <string name="movement_list_screen_edit_movement_dialog_delete_button">Delete movement</string>

    <string name="movement_list_screen_add_or_edit_movement_dialog_name_label">Name</string>
    <string name="movement_list_screen_add_or_edit_movement_dialog_name_field_content_description">Movement name text field</string>
    <string name="movement_list_screen_add_or_edit_movement_dialog_weight_label">Weight (%1$s)</string>

    <!-- Movement Detail Screen -->
    <string name="movement_detail_screen_edit_movement_button_content_description">Edit movement button</string>
    <string name="movement_detail_screen_add_result_button_content_description">Add result button</string>
    <string name="movement_detail_screen_add_result_button">+ Add new</string>
...

    <!-- Result Detail Screen -->
    <string name="result_detail_screen_edit_result_button_content_description">Edit result button</string>

    <!-- Delete Confirm Dialog -->
    <string name="confirm_dialog_are_you_sure">Are you sure you want to delete:</string>
    <string name="confirm_dialog_confirm_button">Yes, delete</string>

    <string name="delete_movement_confirm_dialog_content_description">Delete movement confirmation dialog</string>
    <string name="delete_movement_confirm_dialog_title">Delete movement</string>

    <string name="delete_result_confirm_dialog_content_description">Delete result confirmation dialog</string>
    <string name="delete_result_confirm_dialog_title">Delete result</string>

</resources>
